tests/invalid/UnionType_Invalid_15.whiley
public export method test():
    (&bool)|(&int) x
    x = false
